--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BasicActivity"></activity>
-        <activity android:name=".LeagueActivity"></activity>
+        <activity android:name=".SkillActivity"></activity>
+        <activity android:name=".BasicActivity" />
+        <activity android:name=".LeagueActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
