--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SkillActivity"></activity>
-        <activity android:name=".BasicActivity" />
-        <activity android:name=".LeagueActivity" />
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".Controller.FinishActivity"></activity>
+        <activity android:name=".Controller.SkillActivity" />
+        <activity android:name=".Controller.BasicActivity" />
+        <activity android:name=".Controller.LeagueActivity" />
+        <activity android:name=".Controller.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
